# vsh

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE_SUMMARY.md  README.md  READMEE.md  README_CODE.md  VSH_SPECIFICATION.md  index.html  package-lock.json  package.json  readme.md  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  static.yml
docs/: 404.html  index.html
docs/assets/: index-BAJJ6EOl.js  index-BODwJOTJ.js  index-rE-QUQOl.css
examples/: backup.vsh
src/: config.rs  error.rs  index.css  lib.rs  main.rs
src/components/: Features.tsx  Footer.tsx  GetInvolved.tsx  Hero.tsx  Roadmap.tsx  SponsorButtons.tsx  SyntaxCompare.tsx
src/executor/: builtin.rs  mod.rs
src/pages/: Index.tsx
src/parser/: mod.rs  syntax.rs  tokenizer.rs  translator.rs
tests/: integration_test.rs
